# melek-achiever

./: package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: conf.rs  mod.rs
src/app/: globals.css  icons.css  layout.tsx  page.tsx
src/components/Home/: DetailActivity.tsx
src/handlers/: home.tsx
src/hooks/: useInit.tsx
src/state/: activity.ts  index.ts  state.ts
src/types/: activity.ts  state.ts
